--- a/app/index.html
+++ b/app/index.html
@@ -38,9 +38,9 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
+              <li><a href="#/">Search</a></li>
               <li><a ng-href="#/countries">Countries List</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li><a ng-href="#/">Events</a></li>
             </ul>
           </div>
         </div>
@@ -80,6 +80,8 @@
         <script src="scripts/modules/api/services/apiService.js"></script>
         <script src="scripts/modules/countries/countries.js"></script>
         <script src="scripts/modules/countries/controllers/countriesController.js"></script>
+        <script src="scripts/modules/countries/controllers/countriesSearch.js"></script>
+        <script src="scripts/modules/countries/controllers/countryController.js"></script>
         <!-- endbuild -->
 </body>
 </html>
