--- a/app/index.html
+++ b/app/index.html
@@ -38,10 +38,14 @@
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li><a href="#/">Search</a></li>
-              <li><a ng-href="#/countries">Countries List</a></li>
+              <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Countries <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a ng-href="#/countries">Countries List</a></li>
+                <li><a ng-href="#/">Countries Search</a></li>
+                <li><a ng-href="#/new/country">New Country</a></li>
+              </ul>
               <li><a ng-href="#/">Events</a></li>
-            </ul>
           </div>
         </div>
       </div>
@@ -71,6 +75,9 @@
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/angular-bootstrap/ui-bootstrap-tpls.js"></script>
     <script src="bower_components/angular-local-storage/dist/angular-local-storage.js"></script>
+    <script src="bower_components/angular-simple-logger/dist/angular-simple-logger.js"></script>
+    <script src="bower_components/lodash/lodash.js"></script>
+    <script src="bower_components/angular-google-maps/dist/angular-google-maps.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
