--- a/app/index.html
+++ b/app/index.html
@@ -37,17 +37,23 @@
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
-
             <ul class="nav navbar-nav">
               <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Countries <span class="caret"></span></a>
               <ul class="dropdown-menu">
-                <li><a ng-href="#/countries">Countries List</a></li>
-                <li><a ng-href="#/">Countries Search</a></li>
-                <li><a ng-href="#/new/country">New Country</a></li>
+                <li><a ng-href="#/country/list">Countries List</a></li>
+                <li><a ng-href="#/country/search">Countries Search</a></li>
+                <li><a ng-href="#/country/new">New Country</a></li>
+              </ul>
+
+              <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">User <span class="caret"></span></a>
+              <ul class="dropdown-menu">
+                <li><a ng-href="#/user/login">Login</a></li>
               </ul>
               <li><a ng-href="#/">Events</a></li>
           </div>
+
         </div>
       </div>
     </div>
@@ -91,6 +97,9 @@
         <script src="scripts/modules/countries/controllers/countriesController.js"></script>
         <script src="scripts/modules/countries/controllers/countriesSearch.js"></script>
         <script src="scripts/modules/countries/controllers/countryController.js"></script>
+        <script src="scripts/modules/countries/controllers/countryNewController.js"></script>
+        <script src="scripts/modules/users/users.js"></script>
+        <script src="scripts/modules/users/controllers/userLogin.js"></script>
         <!-- endbuild -->
 </body>
 </html>
