--- a/app/index.html
+++ b/app/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+  <!doctype html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -51,7 +51,7 @@
               <ul class="dropdown-menu">
                 <li><a ng-href="#/user/login">Login</a></li>
               </ul>
-              <li><a ng-href="#/">Events</a></li>
+              <!-- <li><a ng-href="#/">Events</a></li> -->
           </div>
 
         </div>
